# consol

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
consol/: CMD_consol_sh.bat  command.txt  consolSH_3.py  consolSH_4.py  impori.bat  import.bat  info.txt  pyproject.toml  settings.py  setup.py
consol/Cd/: requirements.txt
consol/Cd/file/: brover_test.py  off antivirus.bat  py-to-exe.bat
consol/Cd/path_file/: url ip.py
consol/Cd/root/: pynet .py
consol/Cd/root/kast/: kast.py  start direct.txt
consol/Cd/root/tetris/: kezmenu.lnk  resources.lnk  start.py
