[build-system]
requires = ["poetry-core>=5.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "consolSH"
version = "5.4.8"
description = "я не знаю что тут пиать"
authors = ["Yarik mutg <@HITHELL.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.extras]
docs = ["sphinx"]
